<resources>
    <string name="app_name" translatable="false">aBlueBook</string>
    <string name="pref_file" translatable="false">com.sidemvm.ed.abluebook.PREF_FILE</string>
    <string name="pl_msg_form" translatable="false">\u003c\u003cfName\u003e\u003e\u003c\u003cId::%1$s\u003e\u003e\u003c\u003cName::%2$s\u003e\u003e\u003c\u003cfName::\u003e\u003e</string>
    <string name="banner_id" translatable="false">ca-app-pub-9246476793989866/8960876321</string>

    <!-- related to registration -->
    <string name="email_input_hint">Email</string>
    <string name="password_input_hint">Password</string>
    <string name="action_register">User registration</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="permission_rationale">Permissions needed for aBlueBook app usage</string>
    <string name="owner_prompt">Enter an email address to identify your eForms</string>
    <string name="error_invalid_password">This password is too short - is optional-</string>

    <!-- Strings of menus -->
    <string name="menu_cancel">Cancel</string>
    <string name="menu_edit">Edit</string>
    <string name="menu_share">Share</string>
    <string name="menu_delete">Delete</string>
    <string name="menu_save">Save</string>
    <string name="menu_attach">Attach</string>
    <string name="menu_create_abb">Generate .abb file</string>
    <string name="drawer_close_owner">Close session</string>
    <string name="drawer_open_file">Open .abb/.abba file</string>
    <string name="drawer_offline_title">Offline connections:</string>
    <string name="drawer_adv_switch">Share content</string>
    <string name="drawer_disc_switch">Search for shared content</string>
    <string name="drawer_end_connections">Finalize all offline connections</string>
    <string name="drawer_ep_count">Users connected: %1$s</string>
    <string name="close_ad_hint">Remove advertising!</string>

    <!-- related to e form list -->
    <string name="empty_ef_list_message">There is no eForms, try add some!!!</string>
    <string name="empty_q_list_message">Now add some questions</string>
    <string name="q_hint">Qs: %1$s</string>
    <string name="a_hint">As: %1$s</string>
    <string name="chose_e_form">Choose an abb eForm</string>
    <string name="download_abb_message">To access this file (.abb / .abba) use aBlueBook: https://play.google.com/store/apps/details?id=com.sidemvm.ed.abluebook</string>

    <!-- Related to dialogs-->
    <string name="google_needed">Google Play Services is required for offline connections</string>
    <string name="unlock_answer_hint">%1$s to unlock.</string>
    <string name="export_csv_hint">%1$s export to .csv</string>
    <string name="getting_date_fail_msg">Can\'t get last modification date</string>
    <string name="ans_after_ef_msg">eForm last modification date was before response.
        Showing only answers in order of appearance</string>
    <string name="sel_image_title">Get an image to attach</string>
    <string name="send_by">Send by:</string>
    <string name="exit_msg">¿Are you sure you want to exit?</string>
    <string name="file_generated_msg">The file is ready and available on abb directory</string>
    <string name="discovery_msg">Your device are searching for offline abb content.</string>
    <string name="send_by_default_msg">Trying to share content online by default.\nIf you want to
        share it offline just switch the options in de top left menu or tap OK an try again.</string>
    <string name="handle_file_fail_msg">Can\'t handle this file (only .abb and .abba files)</string>
    <string name="get_form_msg">You gotten an abb eFrom (status: %1$s)</string>
    <string name="opening_file_msg">Opening the file.</string>
    <string name="sharing_offline">Sharing offline</string>
    <string name="receive_answer">Received an answer for: %1$s</string>
    <string name="share_all_hint">Share to all</string>
    <string name="no_one_connected">There is no one connected</string>
    <string name="one_buy_msg">To remove all advertising forever in this installation,
        you must make a small payment only once.</string>
    <string name="restart_msg">You must restart the app to apply changes</string>

    <!--Related to create, delete and edition -->
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="error_field_required">This field is required</string>
    <string name="new_e_form_last_modified_date_msg">This is a new eForm</string>
    <string name="error_already_exist">Already exist</string>
    <string name="fail_message">Something went wrong, please try again: </string>
    <string name="success_message">Successful operation!!</string>
    <string name="image_attached">Successful operation and image attached</string>
    <string name="deleted">Item deleted</string>
    <string name="image_deleted">Image deleted</string>
    <string name="undo">Undo</string>
    <string name="q_num_hint">Question #%1$s</string>
    <string name="new_ef_name_hint">Enter a name for the new eForm</string>
    <string name="new_ef_tapper_prompt">Tapper eForm</string>
    <string name="new_ef_comments_hint">Enter comments for the new eForm (optional)</string>
    <string name="new_ef_tapper_tooltip">tapper is an eForm with questions who will be answered
        one by one tapping on an answer input display, is best for real time questions.</string>
    <string name="question_input_hint">Write question</string>
    <string name="answer_input_hint">Write answer</string>
    <string name="spinner_prompt">Question type: </string>
    <string name="open_a_input_hint">Answer field</string>
    <string name="q_type_essay">Essay question</string>
    <string name="q_type_multi">Multiple choice</string>
    <string-array name="question_types" translatable="false">
        <item>@string/q_type_essay</item>
        <item>@string/q_type_multi</item>
    </string-array>
</resources>