<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/edit"
        android:icon="@android:drawable/ic_menu_edit"
        android:title="@string/menu_edit"
        android:orderInCategory="1"
        app:showAsAction="always"/>

    <item
        android:id="@+id/share"
        android:icon="@android:drawable/ic_menu_share"
        android:title="@string/menu_share"
        android:orderInCategory="2"
        app:showAsAction="always"/>

    <item
        android:id="@+id/delete"
        android:icon="@android:drawable/ic_menu_delete"
        android:orderInCategory="3"
        android:title="@string/menu_delete"
        app:showAsAction="ifRoom" />
</menu>