<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/cancel"
        android:icon="@android:drawable/ic_menu_close_clear_cancel"
        android:title="@string/menu_cancel"
        android:orderInCategory="1"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/attach"
        android:icon="@android:drawable/ic_menu_gallery"
        android:orderInCategory="2"
        android:title="@string/menu_attach"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/save"
        android:icon="@android:drawable/ic_menu_save"
        android:orderInCategory="3"
        android:title="@string/menu_save"
        app:showAsAction="ifRoom" />
</menu>