<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/padding"
    tools:context=".AbbStartupActivity">

    <LinearLayout
        android:id="@+id/email_owner_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center_vertical" >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
            android:textAlignment="center"
            android:layout_margin="@dimen/margin_half"
            android:text="@string/owner_prompt"/>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email_input_hint"
            android:minWidth="@dimen/min_size"
            android:minHeight="@dimen/min_size"
            android:layout_margin="@dimen/margin_half">

            <AutoCompleteTextView
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email_input_hint"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:singleLine="true"
                android:minWidth="@dimen/min_size"
                android:minHeight="@dimen/min_size"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.button.MaterialButton
            android:id="@+id/owner_registration_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_half"
            android:padding="@dimen/padding_half"
            android:text="@string/action_register"
            android:textAppearance="@style/TextAppearance.AppCompat.Button"
            android:textColor="@color/colorBase"
            app:backgroundTint="@color/colorPrimary"
            style="@style/Widget.MaterialComponents.Button"/>
    </LinearLayout>
</android.support.design.widget.CoordinatorLayout>