<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/new_ef_card_view"
    android:layout_gravity="center"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:clickable="true"
    android:focusable="true"
    android:foreground="?android:attr/selectableItemBackground"
    app:cardUseCompatPadding="true"
    app:cardCornerRadius="@dimen/margin"
    app:contentPadding="@dimen/margin">

    <LinearLayout
        android:id="@+id/ef_item_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:animateLayoutChanges="true"
        android:orientation="vertical" >

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/new_ef_item_name_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/new_ef_name_hint"
                android:imeOptions="actionNext"
                android:inputType="textPersonName"
                android:maxLines="1"
                android:singleLine="true" />
        </android.support.design.widget.TextInputLayout>

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/new_ef_item_owner_view"
            style="@style/TextAppearance.AppCompat.Subhead"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_gravity="end"/>

        <CheckBox
            android:id="@+id/tapper_ef_check"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/new_ef_tapper_prompt"/>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/new_ef_item_comments_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/new_ef_comments_hint"
                android:imeOptions="actionDone"
                android:inputType="textMultiLine" />
        </android.support.design.widget.TextInputLayout>

        <android.support.v7.widget.Toolbar
            android:id="@+id/new_ef_card_options_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"/>
    </LinearLayout>
</android.support.v7.widget.CardView>
