<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/show_question"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/padding"
            android:layout_marginStart="@dimen/padding"
            android:layout_marginTop="@dimen/padding"
            android:layout_alignParentTop="true"/>

        <EditText
            android:id="@+id/input_answer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/padding"
            android:layout_marginEnd="@dimen/padding"
            android:layout_marginStart="@dimen/padding"
            android:layout_marginTop="@dimen/padding"
            android:inputType="textMultiLine"
            android:hint="@string/answer_input_hint"
            android:textColorHint="@color/colorPrimaryDark"
            android:padding="@dimen/padding_half"
            android:background="@drawable/depth_background"
            android:scrollHorizontally="false"
            android:textColor="@android:color/secondary_text_light"
            android:layout_below="@+id/show_question"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/input_answer"
            android:gravity="center"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical">

                <ImageButton
                    android:id="@+id/yes_button"
                    android:layout_width="@dimen/clicker_buttons"
                    android:layout_height="@dimen/clicker_buttons"
                    android:layout_margin="@dimen/margin"
                    android:background="@drawable/green_circle"
                    android:contentDescription="@android:string/yes"
                    android:clickable="true"
                    android:focusable="true"
                    android:foreground="?android:attr/selectableItemBackground"/>

                <TextView
                    android:id="@+id/yes"
                    android:layout_width="@dimen/clicker_buttons"
                    android:layout_height="wrap_content"
                    android:text="@string/yes"
                    android:textAlignment="center"/>
            </LinearLayout>


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical">

                <ImageButton
                    android:id="@+id/no_button"
                    android:layout_width="@dimen/clicker_buttons"
                    android:layout_height="@dimen/clicker_buttons"
                    android:layout_margin="@dimen/margin"
                    android:background="@drawable/red_circle"
                    android:contentDescription="@android:string/no"
                    android:clickable="true"
                    android:focusable="true"
                    android:foreground="?android:attr/selectableItemBackground"/>


                <TextView
                    android:id="@+id/no"
                    android:layout_width="@dimen/clicker_buttons"
                    android:layout_height="wrap_content"
                    android:text="@string/no"
                    android:textAlignment="center"/>
            </LinearLayout>
        </LinearLayout>

        <com.google.android.gms.ads.AdView
            xmlns:ads="http://schemas.android.com/apk/res-auto"
            android:id="@+id/ad_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_alignParentBottom="true"
            ads:adSize="BANNER"
            ads:adUnitId="@string/banner_id">
        </com.google.android.gms.ads.AdView>
    </RelativeLayout>
</android.support.v4.widget.NestedScrollView>
